--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Dependencies
 node_modules/
+crm-deployment-package/
+*.tar
+*.tar.gz
 package-lock.json
 yarn.lock
 
@@ -9,6 +12,8 @@ yarn.lock
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
+frontend/.env
 
 # Logs
 logs
